# fastapi-crud

./: pyproject.toml
